--- a/_config.yml
+++ b/_config.yml
@@ -2,17 +2,13 @@
 title: A blog about lorem ipsum dolor sit amet
 description: A blog about lorem ipsum dolor sit amet
 baseurl: "/will-jekyll-template" # the subpath of your site, e.g. /blog
-url: "https://willianjusten.com.br" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
+url: "https://aureliamandani.com" # the base hostname & protocol for your site e.g. 
 
 # User settings
-username: Lorem Ipsum
-user_description: Anon Developer at Lorem Ipsum Dolor
-user_title: Anon Developer
-email: anon@anon.com
-twitter_username: lorem_ipsum
-github_username:  lorem_ipsum
-gplus_username:  lorem_ipsum
-disqus_username: lorem_ipsum
+username: Aurelia Mandani
+user_description: CSIS PhD Candidate, Educator, IT Engineer, and Librarian specializing in Research in Privacy and UX
+user_title: Aurelia Mandani
+
 
 # Build settings
 markdown: kramdown
